Fixed image layout bug

--- a/client/style/Card.scss
+++ b/client/style/Card.scss
@@ -174,6 +174,7 @@
                 width: 240px;
                 margin: 0 auto;
                 display: block;
+                transform: translateX(0);
             }
 
             // Remove the bottom margin if the card is the last
